cmake_minimum_required(VERSION 3.30)
project(dsac__)

set(CMAKE_CXX_STANDARD 20)

add_executable(dsac__ main.cpp
#        linked_list/reverse_list.cpp
#        linked_list/get_intersection_node.cpp
#        linked_list/list_node.h
#        linked_list/util.cpp
#        linked_list/isPalindromeList.cpp
#        linked_list/has_cycle_detect_cycle.cpp
#        linked_list/merge_sorted_list.cpp
#        linked_list/add_two_number.cpp
#        linked_list/remove_Nth_from_end.cpp
#        linked_list/swap_pair.cpp
#        linked_list/copy_random_list.cpp
#        linked_list/sort_list.cpp
#        linked_list/LRU.cpp
#        binary_tree/tree_traverse.cpp
#        binary_tree/tree_node.h
#        binary_tree/tree_max_min_depth.cpp
#        binary_tree/reverse_tree.cpp
#        binary_tree/tree_diameter.cpp
#        binary_tree/binary_search_tree.cpp
#        binary_tree/build_tree.cpp
#        binary_tree/path_sum.cpp
#        binary_tree/lowest_common_ancestor.cpp
#        queue_priority_queue_heap_related/median_finder.cpp
#        stack_related/heap_sort.cpp
#        queue_priority_queue_heap_related/topk_frequent.cpp
#        stack_releated/is_valid_bracket.cpp
#        stack_related/min_stack.cpp
#        stack_related/decode_string.cpp
#        stack_related/daily_temperatures.cpp
#        metrix_related/set_zeros.cpp
#        metrix_related/spiraOrder.cpp
#        metrix_related/rotate_image.cpp
#        metrix_related/search_metrix.cpp
#        array_related/max_sub_array.cpp
#        array_related/merge_interval.cpp
#        array_related/rotate_array.cpp
#        array_related/product_except_self.cpp
#        array_related/move_zeros.cpp
#        traceback/phoneletterCombinations.cpp
#        traceback/combinationSum.cpp
#        traceback/permutation.cpp
#        traceback/subset.cpp
#        traceback/generateParenthesis.cpp
#        traceback/word_search.cpp
#        traceback/restoreIpAddress.cpp
#        array_related/threeSum.cpp
#        array_related/maxWaterContainer.cpp
#        hash/groupAnagrams.cpp
#        traceback/predicateTheWinner.cpp
#        traceback/reverse_stack.cpp
#        traceback/translateNum.cpp
#        traceback/most_value_of_package.cpp
        hash/implement_a_hashmap.cpp
        graph_related/graph.h
        graph_related/traverse.cpp
        string_related/string_to_int.cpp
        string_related/longestUniqueSubstring.cpp
        string_related/longestPalindromeSubstring.cpp
        string_related/add_two_string.cpp
        string_related/minCoverdSubstring.cpp
        string_related/compareSubVersion.cpp
        string_related/string_multiply.cpp
        string_related/longestCommonPrefix.cpp
)
